--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 <TITLE>Test Input </TITLE>
 <SCRIPT LANGUAGE="JavaScript">
 function readText (form) {
-    TestVar =form.inputbox.value;
+    TestVar =form.input1.value;
     alert ("You typed: " + TestVar);
 }
 function writeText (form) {
-    form.inputbox.value = "Have a nice day!"
+    form.input1.value = "Have a nice day!"
 }
 </SCRIPT>
+    
+<script type="text/javascript">
+  window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=document.createElement("script");r.type="text/javascript",r.async=!0,r.src="https://cdn.heapanalytics.com/js/heap-"+e+".js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(r,a);for(var n=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],o=0;o<p.length;o++)heap[p[o]]=n(p[o])};
+  heap.load("136043394");
+</script>
+    
 </HEAD>
 <BODY>
 <FORM NAME="myform" ACTION="" METHOD="GET">
-Enter something in the box: <BR>
-<INPUT TYPE="text" NAME="inputbox" VALUE=""><P>
+What is your favorite color? <BR>
+<INPUT TYPE="text" NAME="input1" VALUE=""><P>
+What is your name? <BR>
+<INPUT TYPE="text" NAME="input2" VALUE=""><P>
 <INPUT TYPE="button" NAME="button1" Value="Read" onClick="readText(this.form)">
 <INPUT TYPE="button" NAME="button2" Value="Write" onClick="writeText(this.form)">
 </FORM>
